 * nodetool repair command now prints progress (CASSANDRA-4767)
 * fix user defined compaction to run against 1.1 data directory (CASSANDRA-5118)
 * Fix CQL3 BATCH authorization caching (CASSANDRA-5145)
 * fix get_count returns incorrect value with TTL (CASSANDRA-5099)
 * better handling for amid compaction failure (CASSANDRA-5137)


1.1.8
 * reset getRangeSlice filter after finishing a row for get_paged_slice
   (CASSANDRA-4919)
 * fix temporarily missing schema after upgrade from pre-1.1.5 (CASSANDRA-5061)
 * reduce log spam from invalid counter shards (CASSANDRA-5026)
 * Improve schema propagation performance (CASSANDRA-5025)
 * Fall back to old describe_splits if d_s_ex is not available (CASSANDRA-4803)
 * Improve error reporting when streaming ranges fail (CASSANDRA-5009)
 * cqlsh: fix timestamp formatting on some platforms (CASSANDRA-5046)
 * Fix ALTER TABLE overriding compression options with defaults (CASSANDRA-4996, 5066)
 * Avoid error opening data file on startup (CASSANDRA-4984)
 * Fix wrong index_options in cli 'show schema' (CASSANDRA-5008)
 * Allow overriding number of available processor (CASSANDRA-4790)


1.1.7
 * cqlsh: improve COPY FROM performance (CASSANDRA-4921)
 * add basic authentication support for Pig CassandraStorage (CASSANDRA-3042)
 * fix CQL2 ALTER TABLE compaction_strategy_class altering (CASSANDRA-4965)
 * expunge row cache post-truncate (CASSANDRA-4940)
 * remove IAuthority2 (CASSANDRA-4875)
 * add get[Row|Key]CacheEntries to CacheServiceMBean (CASSANDRA-4859)
 * fix get_paged_slice to wrap to next row correctly (CASSANDRA-4816)
 * fix indexing empty column values (CASSANDRA-4832)
 * allow JdbcDate to compose null Date objects (CASSANDRA-4830)
 * fix possible stackoverflow when compacting 1000s of sstables
   (CASSANDRA-4765)
 * fix wrong leveled compaction progress calculation (CASSANDRA-4807)
 * add a close() method to CRAR to prevent leaking file descriptors (CASSANDRA-4820)